--- a/src/components/SplashScreen/SplashScreen.module.css
+++ b/src/components/SplashScreen/SplashScreen.module.css
@@ -1,3 +1,13 @@
 .SplashScreen {
-    
+    display: grid;
+    grid-template-columns: 1fr;
+    /* grid-template-rows: auto calc(100vh - auto); */
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    min-height: 600px;
+  
+    background: url(../../assets/header-bg.png) no-repeat center;
+    background-size: cover;
 }
+
