--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -70,7 +70,7 @@
   width: 100%;
 }  */
 
-.cardBase {
+/* .cardBase {
   position: relative;
   border: 3px solid var(--textbox-outline-color);
   border-radius: 8px;
@@ -88,7 +88,7 @@
 .cardBase h4 {
   margin-top: 20px;
   align-self: center;
-}
+} */
 
 
 /*
@@ -120,15 +120,15 @@
 --------------------------------
 */
 
-.projectCards {
+/* .projectCards {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   justify-items: center;
   align-items: center;
   width: 100%;
-}
-
+} */
+/* 
 .projectCard {
   background-color: #f3f3f3;
   padding: 0;
@@ -140,10 +140,10 @@
   grid-template-rows: 140px 1fr;
   align-items: center;
   justify-content: start;
-  /* margin: 30px; */
-}
+  margin: 30px;
+} */
 
-.cardHeader {
+/* .cardHeader {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -156,14 +156,14 @@
   align-items: center;
   justify-content: center;
   z-index: 2;
-}
+} */
 
-.cardHeader h4 {
+/* .cardHeader h4 {
   z-index: 0;
   padding-bottom: 9px;
-}
+} */
 
-.projectCardBG {
+/* .projectCardBG {
   position: relative;
   display: flex;
   align-items: center;
@@ -171,14 +171,14 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
-}
-
+} */
+/* 
 .projectCardBG img {
   height: 100%;
   position: absolute;
-}
+} */
 
-.projectCardText {
+/* .projectCardText {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
@@ -205,7 +205,7 @@
   height: 100%;
   background-color: var(--shadow-color);
   z-index: 1;
-}
+} */
 
 /*
 --------------------------------
