Refactored contact form and scroll to top button

--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -3,7 +3,7 @@
 -- FIXED ELEMENTS SECTION ------
 --------------------------------
 */
-.scrollToTopBtn {
+/* .scrollToTopBtn {
   position: fixed;
   bottom: 2rem;
   right: 1rem;
@@ -35,7 +35,7 @@
   transition: opacity .25s ease-in-out;
   -moz-transition: opacity .25s ease-in-out;
   -webkit-transition: opacity .25s ease-in-out;
-}
+} */
 
 
 /*
