--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -14,3 +14,25 @@
 .ContactForm input[type=submit] {
     margin-left: auto;
 }
+
+.button {
+    border: none;
+    font-size: 120%;
+    color: var(--btn-text-color);
+    background-color: var(--accent-color);
+    width: auto;
+    height: auto;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.default {
+    color: var(--btn-text-color);
+    background-color: var(--accent-color);
+}
+
+.button:hover,
+.button:hover {
+  background-color: var(--btn-hover-color);
+}
