--- a/src/components/Textbox/Textbox.module.css
+++ b/src/components/Textbox/Textbox.module.css
@@ -4,7 +4,7 @@
     line-height: 1.5em;
     border-radius: 5px;
     padding: 20px;
-    max-width: 50%;
+    max-width: 620px;
     min-width: 300px;
     text-align: center;
   }
