--- a/src/components/Cards/Card/Card.module.css
+++ b/src/components/Cards/Card/Card.module.css
@@ -25,7 +25,7 @@
 
 .Card ul {
     list-style-type: none;
-    grid-template-rows: 30px 30px 30px;
+    grid-template-rows: repeat(4, 30px);
     margin: auto 0;
     display: grid;
 }
