--- a/src/components/ProjectCards/ProjectCards.module.css
+++ b/src/components/ProjectCards/ProjectCards.module.css
@@ -1,15 +1,21 @@
 .ProjectCards {
-    display: grid;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(300px, 1fr));
+  grid-gap: 1em;
+  grid-template-rows: auto;
+  justify-items: center;
+  align-items: center;
+  width: 100%;
+  /* max-width: 1240px; */
+}
+
+@media only screen and (max-width: 1110px) {
+  .ProjectCards {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 1em;
-    grid-template-rows: auto;
-    justify-items: space-evenly;
-    align-items: center;
-    width: 100%;
-    max-width: 1240px;
   }
-  
-  /* .projectCard {
+}
+
+/* .projectCard {
     background-color: #f3f3f3;
     padding: 0;
     width: 300px;
