--- a/src/components/ProjectCards/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCards/ProjectCard/ProjectCard.module.css
@@ -6,7 +6,7 @@
     position: relative;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 140px 1fr;
+    grid-template-rows: 80px 1fr;
     align-items: center;
     justify-content: start;
     margin: 30px;
@@ -25,11 +25,12 @@
     align-items: center;
     justify-content: center;
     z-index: 2;
+    padding: 5px;
   }
   
   .cardHeader h4 {
     z-index: 0;
-    padding-bottom: 9px;
+    padding: 0;
   }
   
   .projectCardBG {
