--- a/src/components/ProjectCards/ProjectCards.module.css
+++ b/src/components/ProjectCards/ProjectCards.module.css
@@ -1,7 +1,7 @@
 .ProjectCards {
   display: grid;
-  grid-template-columns: repeat(3, minmax(300px, 1fr));
-  grid-gap: 1em;
+  grid-template-columns: repeat(4, minmax(250px, 1fr));
+  grid-gap: 10px;
   grid-template-rows: auto;
   justify-items: center;
   align-items: center;
@@ -11,7 +11,7 @@
 
 @media only screen and (max-width: 1110px) {
   .ProjectCards {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   }
 }
 
